# OperationSystems

./: README.md  tennis.sh
ex1/: gccfind.sh  tennis_str.txt
ex1/shell/: myshell.c
ex2/: CMakeLists.txt  ex21.c
ex3/: CMakeLists.txt  Makefile  boundedbuffer.c  boundedbuffer.h  coeditor.c  coeditor.h  dispatcher.c  dispatcher.h  main.c  producer.c  producer.h  queue.c  queue.h  screenmanager.c  screenmanager.h  unboundedBuffer.c  unboundedBuffer.h
shell/: myshell.c
untitled/: CMakeLists.txt  comp.out  conf.txt  ex21.c  ex22.c  similar.txt
untitled/tests_ex22/messed_up_paths_test/: error.txt
untitled/tests_ex22/messed_up_paths_test/messing/up/students/Excellent_gets_100/: my_exec
untitled/tests_ex22/moodle_test/: results.csv
untitled/tests_ex22/tough_test/: a.out  comp.out  error.txt  results.csv
